success css update at the moment

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -4,11 +4,11 @@
 } */
 
 .app {
-  color: green;
+  color: red;
 }
 
 p {
-  background-color: blue;
+  background-color: red;
   color: white;
 }
 
