complete set css loader

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -4,14 +4,14 @@
 } */
 
 .app {
-  color: red;
+  color: blue;
 }
 
 p {
-  background-color: red;
+  background-color: blue;
   color: white;
 }
 
 .app h2 {
-  color: pink;
+  color: brown;
 }
