removed extra line

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,14 +1,9 @@
-/* .app {
-  width: 50%;
-  color: yellow;
-} */
-
 .app {
   color: blue;
 }
 
 p {
-  background-color: blue;
+  background-color: pink;
   color: white;
 }
 
