add at-rule-no-unkonwn null rules

--- a/src/components/appScss.scss
+++ b/src/components/appScss.scss
@@ -1,16 +1,19 @@
-@import '../styles';
+@import "../styles";
 
 // $brown: brown;
 
 .app {
   color: red;
+
   p {
-  background-color: yellow;
-  color: red;
+    background-color: yellow;
+    color: red;
   }
+
   h2 {
-  color:$brown;
+    color: $brown;
   }
+
   @include button;
 }
 
